syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (UserRequest) returns (UserResponse);
  rpc GetUser (UserRequest) returns (UserResponse);
  rpc UpdateUser (UserRequest) returns (UserResponse);
  rpc DeleteUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string message = 4;
}
